envoy/envoy/cec.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: deathstar-lb
  namespace: exam
spec:
  services:
    - name: deathstar
      namespace: exam
    - name: darkstar
      namespace: exam
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      name: lb-listener
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: deathstar-lb
                rds:
                  route_config_name: lb_route
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: lb_route
      virtual_hosts:
        - name: "lb_route"
          domains: [ "*" ]
          routes:
            - match:
                prefix: "/"
              route:
                weighted_clusters:
                  clusters:
                    - name: "exam/deathstar"
                      weight: 80
                    - name: "exam/darkstar"
                      weight: 20
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: "exam/deathstar"
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      type: EDS
      outlier_detection:
        split_external_local_origin_errors: true
        consecutive_local_origin_failure: 2
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: "exam/darkstar"
      connect_timeout: 3s
      lb_policy: ROUND_ROBIN
      type: EDS
      outlier_detection:
        split_external_local_origin_errors: true
        consecutive_local_origin_failure: 2
