envoy/envoy/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-worker
spec:
  nodeName: kind-worker
  containers:
  - name: netshoot
    image: nicolaka/netshoot:latest
    command: ["sleep", "infinite"]
